@@ -3,7 +3,7 @@
 # This is part of the schedule project.
 
 BEGIN { require 5.012 }
-package Schedule v7.5.0;
+package Schedule v7.5.3;
 
 use strict;
 use warnings;
@@ -147,7 +147,7 @@ if(exists($ENV{'SCHEDULE_OPTS'})) {
 	unshift(@ARGV, &env_to_array('SCHEDULE_OPTS'))
 }
 
-eval "END { $s->did_alpha() || $s->exec_alpha() }";
+eval 'END { $s->did_alpha() || $s->exec_alpha() }';
 
 # Parse Options:
 
